update  Swagger
